<resources>
    <string name="app_name">LEADERBOARD</string>
    <string name="learning">Learning Leaders</string>
    <string name="skill_iq">Skill IQ Leaders</string>
    <string name="logo">Logo</string>
    <string name="project_submission">Project Submission</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="submit">Submit</string>
    <string name="email_address">Email Address</string>
    <string name="project_on_gitnub_link">Project on Gitnub Link</string>
    <string name="are_you_sure">Are you sure</string>
    <string name="yes">Yes</string>
    <string name="submission_successful">Submission Successful</string>
    <string name="submission_failed">Submission not Successful</string>
    <string name="todo">TODO</string>
    <string name="submission_not_successfull">Submission not successfull</string>


</resources>