<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimaryDark"
    tools:context=".SubmitForm">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/submitAppLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="#000000">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


            <ImageView
                android:id="@+id/formLogo"
                android:layout_width="321dp"
                android:layout_height="73dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:contentDescription="@string/logo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/gads" />

            <ImageButton
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="#000000"
                app:layout_constraintEnd_toStartOf="@id/formLogo"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/abc_vector_test"
                android:contentDescription="@string/todo" />

            <TextView
                android:id="@+id/project_submission_textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/project_submission"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="#F9A825"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/formLogo"
                app:layout_constraintTop_toBottomOf="@+id/formLogo" />

            <View
                android:id="@+id/submitDivider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="8dp"
                android:background="#FBC02D"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/project_submission_textView" />

            <!--            <View-->
<!--                android:id="@+id/submitDivider"-->
<!--                android:layout_width="match_parent"-->
<!--                android:layout_height="1dp"-->
<!--                android:layout_marginTop="8dp"-->
<!--                android:background="#FBC02D"-->
<!--                app:layout_constraintBottom_toBottomOf="parent"-->
<!--                app:layout_constraintEnd_toEndOf="parent"-->
<!--                app:layout_constraintStart_toStartOf="parent"-->
<!--                app:layout_constraintTop_toBottomOf="@id/project_submission_textView" />-->


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="108dp"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/submitAppLayout">

        <EditText
            android:id="@+id/editFirstName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints="First Name"
            android:background="@drawable/form_round_corner"
            android:ems="10"
            android:hint="@string/first_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_black"
            android:textCursorDrawable="@null"
            android:textStyle="bold" />

        <EditText
            android:id="@+id/editLastName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:autofillHints="Last Name"
            android:background="@drawable/form_round_corner"
            android:ems="10"
            android:hint="@string/last_name"
            android:inputType="textPersonName"
            android:padding="8dp"
            android:singleLine="true"
            android:textAppearance="@style/TextAppearance.AppCompat.Large"
            android:textColor="@color/text_black"
            android:textCursorDrawable="@null"
            android:textStyle="bold" />
    </androidx.appcompat.widget.LinearLayoutCompat>

    <EditText
        android:id="@+id/editEmailAddress"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Enter EMail Address"
        android:background="@drawable/form_round_corner"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:padding="8dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text_black"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout" />

    <EditText
        android:id="@+id/editProjectLink"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:autofillHints="Project Link on Github"
        android:background="@drawable/form_round_corner"
        android:backgroundTint="#FFFFFF"
        android:ems="10"
        android:hint="@string/project_on_gitnub_link"
        android:inputType="textPersonName"
        android:padding="8dp"
        android:singleLine="true"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/text_black"
        android:textCursorDrawable="@null"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editEmailAddress" />

    <Button
        android:id="@+id/submit_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/form_submit_btn"
        android:text="@string/submit"
        android:textColor="#FFFFFF"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.45"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editProjectLink"
        app:layout_constraintVertical_bias="0.079" />


</androidx.constraintlayout.widget.ConstraintLayout>